--- a/WebDevFlask/WebDevFlask/templates/layout.html
+++ b/WebDevFlask/WebDevFlask/templates/layout.html
@@ -31,7 +31,7 @@
 						<a class="nav-link" href="{{ url_for('home') }}">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/processfile">Upload File</a>
+						<a class="nav-link" href="/processfile">Upload File Page</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="{{ url_for('about') }}">About</a>
