--- a/WebDevFlask/WebDevFlask/templates/layout.html
+++ b/WebDevFlask/WebDevFlask/templates/layout.html
@@ -31,7 +31,7 @@
 						<a class="nav-link" href="{{ url_for('home') }}">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/processfile">Upload File Page</a>
+						<a class="nav-link" href="/uploadfile">Upload File Page</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="{{ url_for('about') }}">About</a>
@@ -76,6 +76,8 @@
 	<script src="/static/scripts/jquery-1.10.2.js"></script>
 	<script src="/static/scripts/bootstrap.js"></script>
 	<script src="/static/scripts/respond.js"></script>
+
+	<script src="/static/scripts/upload.js"></script>
 
 	<script src="/static/scripts/clean-blog.js"></script>
 	<script src="/static/scripts/clean-blog.min.js"></script>
